updated openapi spec and dynamic route in devices
