# routes/devices.js
@@ -5,10 +5,10 @@ import DeviceService from '../services/device-service.js'
 const deviceRouter = Router()
 
 deviceRouter.route('/').get(tryCatchWrapper(DeviceService.getAllDevices))
-deviceRouter.route('/:id').get(tryCatchWrapper(DeviceService.getDevice))
-deviceRouter.route('/own').get(tryCatchWrapper(DeviceService.getOwnedDevices))
+deviceRouter.route('/owned').get(tryCatchWrapper(DeviceService.getOwnedDevices))
 deviceRouter.get('/instock', tryCatchWrapper(DeviceService.getInStockDevices))
 deviceRouter.route('/assign').post(tryCatchWrapper(DeviceService.assignDevice))
 deviceRouter.route('/release').post(tryCatchWrapper(DeviceService.returnDevice))
+deviceRouter.route('/:id').get(tryCatchWrapper(DeviceService.getDevice))
 
 export default deviceRouter
